# warcdedupe

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
benches/: parser.rs
src/: copy.rs  file.rs  lib.rs  main.rs  reader.rs  tests.rs
warcdedupe/: Cargo.toml
warcdedupe/benches/: parser.rs
warcdedupe/src/: digest.rs  lib.rs  main.rs  response_log.rs  test.rs
warcdedupe/tests/: png2.warc  simple_dedupe.rs
warcio/: Cargo.toml  build.rs
warcio/benches/: parser.rs
warcio/data/: README.md  field-type.ini  record-type.ini
warcio/src/: compression.rs  header.rs  lib.rs  reader.rs  record.rs  tests.rs  version.rs
warcio/src/header/: field_name.rs  fieldkind.rs  fieldname.rs  recordkind.rs  recordtype.rs
warcio/src/index/: cdx.rs  cdxj.rs  mod.rs
warcio/src/tests/: mod.rs  read.rs  write.rs
