[package]
name = "warcdedupe"
version = "0.1.0"
authors = ["Peter Marheine <peter@taricorp.net>"]
description = "A tool for deduplicating WARC files"
repository = "https://bitbucket.org/tari/warcdedupe"
readme = "README.md"
license = "BSD-3-Clause"

categories = ["command-line-utilities", "science"]
keywords = ["warc", "revisit", "deduplicate"]

[lib]
name = "warcio"

[features]
default = ["chrono"]

[dependencies]
chrono = { version = "0.4.0", optional = true }
docopt = "0.8.3"
errno = "0.2.3"
httparse = "1.2.4"
failure = "0.1.1"
lazy_static = "1.0.0"
libc = "0.2.36"
libflate = "0.1.14"
log = "0.4.1"
regex = "0.2.10"
serde = "1.0.33"
serde_derive = "1.0.33"
sha-1 = "0.7"
twoway = "0.1.7"

[dev-dependencies]
criterion = "0.2.1"

[[bench]]
name = "parser"
harness = false

[badges]
travis-ci = { repository = "tari/warcdedupe" }
maintenance = { status = "experimental" }

[profile.release]
lto = true

[profile.bench]
lto = true

