[package]
name = "warcdedupe"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "warcdedupe"

[lib]

[features]
default = []

[dependencies]
warcio = { path = "../warcio" }

blake3 = { version = "1.0.0", features = ["rayon"] }
flate2 = "1.0.20"
httparse = "1.4.1"
indicatif = "0.16.2"
lazy_static = "1.0.0"
log = "0.4.1"
mime = "0.3.16"

# Command line handling
docopt = "1.1.1"
serde = "1.0.33"
serde_derive = "1.0.33"

# Binary driver
nix = "0.22.0"
memmap2 = "0.3.0"
pretty_env_logger = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.7.2"

[badges]
maintenance = { status = "experimental" }

