[package]
name = "warcdedupe"
version = "0.3.0-pre"
edition = "2018"

description = "A library and tool for deduplicating WARC records"
repository = "https://gitlab.com/taricorp/warcdedupe"
license = "BSD-3-Clause"

categories = ["compression", "science"]
keywords = ["warc", "revisit", "deduplicate"]

[[bin]]
name = "warcdedupe"

[lib]

[dependencies]
warcio = { path = "../warcio" }

data-encoding = "2.3.2"
flate2 = "1.0.20"
httparse = "1.4.1"
indicatif = "0.16.2"
lazy_static = "1.0.0"
log = "0.4.1"
mime = "0.3.16"
sha-1 = "0.9.7"
thiserror = "1.0"

# Command line handling
clap = "2.33"

# Binary driver
nix = "0.22.0"
memmap2 = "0.3.0"
pretty_env_logger = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.7.2"

[badges]
maintenance = { status = "experimental" }

