[package]
name = "warcio"
version = "0.2.0"
authors = ["Peter Marheine <peter@taricorp.net>"]
edition = "2018"

description = "A library for reading and writing WARC files"
repository = "https://gitlab.com/taricorp/warcdedupe"
readme = "README.md"
license = "BSD-3-Clause"

categories = ["science"]
keywords = ["warc", "revisit", "deduplicate"]

[dependencies]
chrono = { version = "0.4.0", optional = true }
flate2 = "1.0.20"
lazy_static = "1.0.0"
log = "0.4.1"
memchr = "2.4.0"
phf = { version = "0.9.0", features = ["uncased"] }
regex = "1.5.4"
uncased = "0.9.6"

[build-dependencies]
phf_codegen = "0.9.0"
rust-ini = "0.17.0"
uncased = "0.9.6"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "parser"
harness = false

