[package]
name = "warcio"
version = "0.3.0-pre"
authors = ["Peter Marheine <peter@taricorp.net>"]
edition = "2018"

description = "A library for reading and writing WARC files"
repository = "https://gitlab.com/taricorp/warcdedupe"
license = "BSD-3-Clause"

categories = ["science"]
keywords = ["warc", "revisit", "deduplicate"]

[dependencies]
buf_redux = "0.8.4"
chrono = { version = "0.4.0", optional = true }
flate2 = "1.0.20"
indexmap = "1.7.0"
lazy_static = "1.0.0"
log = "0.4.1"
memchr = "2.4.0"
phf = { version = "0.9.0", features = ["uncased"] }
regex = "1.5.4"
thiserror = "1.0"
uncased = "0.9.6"

[build-dependencies]
phf_codegen = "0.9.0"
rust-ini = "0.17.0"
uncased = "0.9.6"
